# atlasBasedSegmentation

./: CMakeLists.txt  DeformableRegistration2.cpp  DeformableRegistration3.cpp  DeformableRegistration4.cpp  DeformableRegistration5.cpp  README.md  affine2D.cpp  affine3dRegistration.cpp  affine3dRegistration.h  affineTransform3d.cpp  applyMask.cpp  applyMask.h  applyMask3d.cpp  atlasBasedSegmentation.cpp  atlasBasedSegmentation.h  convert3d.cpp  convert4d.cpp  convertor.cpp  convertor.h  deformableRegistration.cpp  deformableRegistration.h  evalMaskOverlap.cpp  evalMaskOverlap.h  flip3d.cpp  interpolateInterleaves.cpp  interpolateInterleaves.h  labelInverseTransform.cpp  scratch.cpp  similarity3DTransform.cpp  splitter.cpp  subtract2d.cpp  subtract2d.h  subtract3d.cpp  subtract3d.h  test.cpp  transform.cpp  transform.h
